--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  /* border: solid 2px red; */
+  display: flex;
 }
 
 .icon {
@@ -33,8 +35,27 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin: 10px;
 }
 
+.header{
+  /* border: solid 2px green; */
+  gap: 10px;
+}
+
+.two{
+  margin-top: 10px;
+  margin-bottom:10px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  /* border: solid 2px yellowgreen; */
+  justify-content: space-between;
+  flex-shrink: 0;
+  font-size: large;
+  font-weight: bold;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -48,6 +69,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  /* border: 2px solid black; */
 }
 
 button {
@@ -60,6 +82,8 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-top: 10px;
+  margin-bottom:10px ;
 }
 
 button.cancel {
