--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,47 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
-
+ul,
+a{
+  text-decoration: none;
+  list-style: none;
+}
+a{
+  color: darkgray;
+}
+.left-links{
+  /* border: solid 2px red; */
+  padding-left: 15px;
+  display: flex;
+  gap:14px ;
+}
+.right-links{
+  /* border: 2px solid green; */
+  padding-left: 15px;
+  display: flex;
+  gap:14px ;
+  margin-left: auto;
+  padding-right: 15px;
+}
+.header{
+  /* border: 2px solid blueviolet; */
+  display: flex;
+  padding: 5px;
+  justify-content: center;
+}
+.content{
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
 img {
   width: 600px;
+  margin: 10px;
 }
 
 button {
@@ -16,6 +53,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin: 10px;
+  padding: 10px;
 }
 
 input {
@@ -23,4 +62,10 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+.footer{
+  /* border: 2px solid brown; */
+  display: flex;
+  justify-content: center;
+  background-color: #eeeeee;
 }
