--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,14 +2,25 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
-
+.all{
+  /* border: solid 2px red; */
+  display: flex;
+  flex: 1;
+}
 .footer {
   height: 72px;
   background: #eee;
@@ -17,13 +28,48 @@ body {
 }
 
 .sidebar {
-  width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-basis: 300px;
+  flex-shrink: 0;
+  padding: 16px;
+  font-size: 24px;
+  border: 2px solid seagreen;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  /* border: 2px yellowgreen solid; */
+  flex-basis: 300px;
+  /* padding:48px; */
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+a{
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  /* border: solid red 2px; */
+  
+}
+ul,
+li{
+  list-style: none;
+  padding: 0;
+  margin-left: 0;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.tex{
+  /* border: 2px blueviolet solid; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-evenly;
+}
+.footer{
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
