--- a/html and css excersice/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/html and css excersice/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +20,31 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.header .logo {
+  display: grid;
+  place-items: start;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
 }
+.menu ul {
+  display: grid;
+  list-style: none;
+  grid-auto-flow: column;
+  justify-content: space-between;
+}
 
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
+  display: grid;
+  gap: 50px;
+  grid-area: 2/1/4;
 }
 
 .sidebar .photo {
@@ -35,7 +54,11 @@
   font-weight: normal;
   border-radius: 10px;
 }
-
+.photo,
+.side-content {
+  display: grid;
+  place-items: center;
+}
 
 .sidebar .side-content {
   background-color: white;
@@ -45,9 +68,12 @@
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
+.nav ul {
+  display: grid;
+}
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
@@ -55,6 +81,9 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -65,9 +94,10 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +113,8 @@
 
 .footer {
   background-color: #393f4d;
+  display: grid;
+  grid-area: 4/1/4/3;
 }
 
 .footer p {
